--- a/Index.cshtml
+++ b/Index.cshtml
@@ -4,6 +4,7 @@
 
     <head>
         <link href="~/Styles/Home.css" rel="stylesheet" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Final Project</title>
     </head>
 
@@ -17,44 +18,52 @@
         <div class ="logintable">
         
             <div id = "logintext"><span>Already have an account with us? Returning users may log in by entering their site username and password.</span></div>
-            
-                <div class="input" id="loginuser" align="right">
-                Username <input class = "inputbox">    
-                </div>
-            
-                <div class="input" id="loginpass" align="right">
-                Password <input class= "inputbox">
-                </div>
+            <div id = "logintextmobile">Login</div>
                 
-                <div class="login" id="login" align="right">
-                <button class="button1">Log In</button>
-                </div>
+            <div class="input">
+                <div class="label">Username</div> 
+                <div class="inputbox"><input></div>
+            </div>
+                
+            <div class="input">
+                <div class="label" id="loginpass">Password</div>
+                <div class= "inputbox"><input></div>
+            </div>
+                
+            <div class="button1" id="login">
+            <button type="submit" class="login">Log In</button>
+            </div>
             
         </div>
         
         <div class ="registertable">
         
             <div id = "registertext"><span>New users, please create a new account by providing us with some basic information.</span></div>
-            
-                <div class="input" id="registeruser" align="right">
-                Username <input class = "inputbox">    
-                </div>
-            
-                <div class="input" id="registerpass" align="right">
-                Password <input class= "inputbox">
-                </div>
-            
-                <div class="input" id="registeremail" align="right">
-                E-Mail Address <input class= "inputbox">
-                </div>
-            
-                <div class="input" id="registerconfirmemail" align="right">
-                Repeat E-Mail Address <input class= "inputbox">
-                </div>
+            <div id = "registertextmobile">Create Account</div>
                 
-                <div class="button2" id="register" align="right">
-                <button type="submit">Create Account</button>
-                </div>
+            <div class="input">
+                <div class="label" id="registeruser">Username</div>
+                <div class="inputbox"><input></div>
+            </div>
+
+            <div class="input">
+                <div class="label" id="registerpass">Password</div>
+                <div class="inputbox"><input></div>
+            </div>
+
+            <div class="input">
+                <div class="label" id="registeremail">E-Mail Address</div>
+                <div class="inputbox"><input></div>
+            </div>
+
+            <div class="input">
+                <div class="label" id="registerconfirmemail">Repeat E-Mail Address</div>
+                <div class="inputbox"><input></div>
+            </div>
+                
+            <div class="button2" id="register">
+                <button type="submit" class="createaccount">Create Account</button>
+            </div>
             
         </div>
         
