--- a/Home.css
+++ b/Home.css
@@ -137,10 +137,12 @@
 
     .button1 {
         text-align: center;
+        padding: 0px;
     }
 
     .button2 {
         text-align: center;
+        padding: 0px;
     }
 }
 
